tests/ui/recursion/issue-83150.stderr
warning: function cannot return without recursing
  --> $DIR/issue-83150.rs:11:1
   |
LL | fn func<T: Iterator<Item = u8>>(iter: &mut T) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot return without recursing
LL |
LL |     func(&mut iter.map(|x| x + 1))
   |     ------------------------------ recursive call site
   |
   = help: a `loop` may express intention better if this is on purpose
   = note: `#[warn(unconditional_recursion)]` on by default

error: reached the type-length limit while instantiating `<&mut Map<&mut Map<&mut ..., ...>, ...> as Iterator>::map::<..., ...>`
  --> $DIR/issue-83150.rs:13:15
   |
LL |     func(&mut iter.map(|x| x + 1))
   |               ^^^^^^^^^^^^^^^^^^^
   |
   = help: consider adding a `#![type_length_limit="23068663"]` attribute to your crate
   = note: the full type name has been written to '$TEST_BUILD_DIR/recursion/issue-83150/issue-83150.long-type.txt'

error: aborting due to 1 previous error; 1 warning emitted

